Cleaned up commands with codegansta's cli